test_env = environment()
test_env.set('ABS_TOP_BUILDDIR', meson.build_root())
test_env.set('ABS_TOP_SOURCEDIR', meson.source_root())
test_env.set('GEGL_SWAP', 'RAM')
test_env.set('GEGL_PATH', join_paths(meson.build_root(), 'operations'))
# test_env.append('LD_LIBRARY_PATH', join_paths(meson.build_root(), 'gegl', '.libs'))
test_env.append('GI_TYPELIB_PATH', join_paths(meson.build_root(), 'gegl'))

# subdir('buffer')
subdir('mipmap')
# subdir('compositions')
subdir('simple')
subdir('xml')
# subdir('ff-load-save')
subdir('python')
