libbuffer_sources = [
  'gegl-buffer.c',
  'gegl-buffer-access.c',
  'gegl-buffer-index.h',
  'gegl-buffer-iterator.c',
  'gegl-buffer-cl-iterator.c',
  'gegl-buffer-cl-cache.c',
  'gegl-buffer-linear.c',
  'gegl-buffer-load.c',
  'gegl-buffer-save.c',
  'gegl-cache.c',
  'gegl-sampler.c',
  'gegl-sampler-cubic.c',
  'gegl-sampler-linear.c',
  'gegl-sampler-nearest.c',
  'gegl-sampler-nohalo.c',
  'gegl-sampler-lohalo.c',
  'gegl-region-generic.c',
  'gegl-tile.c',
  'gegl-tile-source.c',
  'gegl-tile-storage.c',
  'gegl-tile-backend.c',
  'gegl-tile-backend-file-async.c',
  'gegl-tile-backend-ram.c',
  'gegl-tile-backend-swap.c',
  'gegl-tile-handler.c',
  'gegl-tile-handler-private.h',
  'gegl-tile-handler-cache.c',
  'gegl-tile-handler-chain.c',
  'gegl-tile-handler-empty.c',
  'gegl-tile-handler-log.c',
  'gegl-tile-handler-zoom.c',
]

libbuffer = static_library('buffer',
  libbuffer_sources,
  include_directories: libgegl_common_includes,
  dependencies: libgegl_common_dependencies,
)
