gegl_buffer_sources = files(
  'gegl-buffer-access.c',
  'gegl-buffer-cl-cache.c',
  'gegl-buffer-cl-iterator.c',
  'gegl-buffer-index.h',
  'gegl-buffer-iterator.c',
  'gegl-buffer-linear.c',
  'gegl-buffer-load.c',
  'gegl-buffer-save.c',
  'gegl-buffer.c',
  'gegl-cache.c',
  'gegl-region-generic.c',
  'gegl-sampler-cubic.c',
  'gegl-sampler-linear.c',
  'gegl-sampler-lohalo.c',
  'gegl-sampler-nearest.c',
  'gegl-sampler-nohalo.c',
  'gegl-sampler.c',
  'gegl-tile-backend-file-async.c',
  'gegl-tile-backend-ram.c',
  'gegl-tile-backend-swap.c',
  'gegl-tile-backend.c',
  'gegl-tile-handler-cache.c',
  'gegl-tile-handler-chain.c',
  'gegl-tile-handler-empty.c',
  'gegl-tile-handler-log.c',
  'gegl-tile-handler-private.h',
  'gegl-tile-handler-zoom.c',
  'gegl-tile-handler.c',
  'gegl-tile-source.c',
  'gegl-tile-storage.c',
  'gegl-tile.c',
)

gegl_buffer_lib = static_library('gegl_buffer',
  gegl_buffer_sources,
  include_directories: [ rootInclude, geglInclude, ],
  dependencies: [
    babl,
    glib,
  ],
)
