liboperation_sources = [
  'gegl-extension-handler.c',
  'gegl-operation.c',
  'gegl-operation-area-filter.c',
  'gegl-operation-composer.c',
  'gegl-operation-composer3.c',
  'gegl-operation-filter.c',
  'gegl-operation-handlers.c',
  'gegl-operation-handlers-private.h',
  'gegl-operation-meta.c',
  'gegl-operation-meta-json.c',
  'gegl-operation-point-composer.c',
  'gegl-operation-point-composer3.c',
  'gegl-operation-point-filter.c',
  'gegl-operation-point-render.c',
  'gegl-operation-property-keys.c',
  'gegl-operation-sink.c',
  'gegl-operation-source.c',
  'gegl-operation-temporal.c',
  'gegl-operation-context.c',
  'gegl-operation-context-private.h',
  'gegl-operations.c',
  'gegl-operations.h',
]

liboperation = static_library('operation',
  liboperation_sources,
  include_directories: libgegl_common_includes,
  dependencies: libgegl_common_dependencies,
)
