gegl_sources += files(
  'gegl-extension-handler.c',
  'gegl-operation-area-filter.c',
  'gegl-operation-composer.c',
  'gegl-operation-composer3.c',
  'gegl-operation-context-private.h',
  'gegl-operation-context.c',
  'gegl-operation-filter.c',
  'gegl-operation-handlers-private.h',
  'gegl-operation-handlers.c',
  'gegl-operation-meta-json.c',
  'gegl-operation-meta.c',
  'gegl-operation-point-composer.c',
  'gegl-operation-point-composer3.c',
  'gegl-operation-point-filter.c',
  'gegl-operation-point-render.c',
  'gegl-operation-property-keys.c',
  'gegl-operation-sink.c',
  'gegl-operation-source.c',
  'gegl-operation-temporal.c',
  'gegl-operation.c',
  'gegl-operations.c',
)
gegl_operation_headers = files(
  'gegl-extension-handler.h',
  'gegl-operation-area-filter.h',
  'gegl-operation-composer.h',
  'gegl-operation-composer3.h',
  'gegl-operation-context.h',
  'gegl-operation-filter.h',
  'gegl-operation-handlers.h',
  'gegl-operation-meta-json.h',
  'gegl-operation-meta.h',
  'gegl-operation-point-composer.h',
  'gegl-operation-point-composer3.h',
  'gegl-operation-point-filter.h',
  'gegl-operation-point-render.h',
  'gegl-operation-property-keys.h',
  'gegl-operation-sink.h',
  'gegl-operation-source.h',
  'gegl-operation-temporal.h',
  'gegl-operation.h',
)

install_headers(gegl_operation_headers,
  subdir: api_name / 'operation',
)
