libpropertytypes_sources = [
  'gegl-audio-fragment.c',
  'gegl-color.c',
  'gegl-curve.c',
  'gegl-path.c',
  'gegl-paramspecs.c',
]

libpropertytypes = static_library('propertytypes',
  libpropertytypes_sources,
  include_directories: libgegl_common_includes,
  dependencies: libgegl_common_dependencies,
)
